--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-channel = "2.3.1"
+futures = "0.3.30"
+iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "multi-window", "tokio"] }
+rustc-hash = "2.0.0"
+tokio = { version = "1.39.2", features = ["sync"] }
 windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_System_Memory"] }
