--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ futures = "0.3.30"
 fuzzy-matcher = "0.3.7"
 iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "image", "multi-window", "tokio"] }
 rustc-hash = "2.0.0"
-tokio = { version = "1.39.2", features = ["fs", "sync"] }
+tokio = { version = "1.39.2", features = ["fs", "rt", "sync"] }
 windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_System_Memory"] }
